--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,14 @@ dependencies:
   url_launcher: ^6.2.1
   auto_route: ^7.8.4
   firebase_core: ^2.24.0
+  envied: ^0.5.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
   auto_route_generator: ^7.3.2
+  envied_generator: ^0.5.2
   build_runner: ^2.4.7
 
 flutter:
