--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_core: ^2.24.0
   envied: ^0.5.2
   flutter_launcher_icons: ^0.13.1
+  overlapped_carousel: ^1.0.1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
