--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   overlapped_carousel: ^1.0.1
   flutter_svg: ^2.0.9
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
