--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   overlapped_carousel: ^1.0.1
   flutter_svg: ^2.0.9
   card_swiper: ^3.0.1
+  flutter_expandable_fab: ^2.0.0
 
 dev_dependencies:
   flutter_test:
